--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kolossal-io/laravel-multiplex": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.16",
         "livewire/livewire": "^3.0",
         "spatie/laravel-permission": "^5.11"
     },
