--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "choices.js": "^10.2.0",
+        "filepond": "^4.30.4",
+        "flatpickr": "^4.6.13"
     }
 }
