--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.16",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-data": "^3.9",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
