--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "livewire/livewire": "^3.0",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-permission": "^5.11",
-        "setasign/fpdi": "^2.4",
-        "setasign/fpdi_pdf-parser": "2.0.6"
+        "setasign/fpdi-fpdf": "^2.3",
+        "setasign/fpdi_pdf-parser": "2.0.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
