--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "aws/aws-sdk-php": "^3.291",
+        "barryvdh/laravel-translation-manager": "^0.6.5",
         "guzzlehttp/guzzle": "^7.2",
         "kolossal-io/laravel-multiplex": "^1.0",
         "laravel/framework": "^10.10",
