--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.13.3",
+        "@alpinejs/ui": "^3.13.3-beta.4",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
