--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "league/flysystem-aws-s3-v3": "^3.16",
         "livewire/livewire": "^3.0",
         "setasign/fpdi-fpdf": "^2.3",
-        "setasign/fpdi_pdf-parser": "2.0.4",
+        "setasign/fpdi_pdf-parser": "^2.1",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-permission": "^5.11"
     },
