--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "choices.js": "^10.2.0",
         "filepond": "^4.30.4",
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "tippy.js": "^6.3.7"
     }
 }
