--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "setasign/fpdi-fpdf": "^2.3",
         "setasign/fpdi_pdf-parser": "^2.1",
         "spatie/laravel-data": "^3.9",
+        "spatie/laravel-pdf": "^1.1",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
