--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "choices.js": "^10.2.0",
         "filepond": "^4.30.4",
         "flatpickr": "^4.6.13",
+        "puppeteer": "^21.7.0",
         "tippy.js": "^6.3.7"
     }
 }
