--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "livewire/livewire": "^3.0",
         "setasign/fpdi-fpdf": "^2.3",
         "setasign/fpdi_pdf-parser": "^2.1",
+        "spatie/laravel-backup": "^8.6",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-pdf": "^1.1",
         "spatie/laravel-permission": "^5.11"
