--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@dmuy/timepicker": "^2.0.2",
         "choices.js": "^10.2.0",
         "filepond": "^4.30.4",
         "flatpickr": "^4.6.13",
